.provarCaches/00D5f000005vwGkEAI/objects/rootstock__UI_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>rootstock__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to make the UI rule active.</description>
        <inlineHelpText>Check to make the UI rule active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user is allowed to override the action field values.</description>
        <inlineHelpText>If checked, the user is allowed to override the action field values.</inlineHelpText>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Criteria__c</fullName>
        <description>The criteria which qualifies the record to apply the rule.</description>
        <inlineHelpText>The criteria which qualifies the record to apply the rule.</inlineHelpText>
        <label>Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Description__c</fullName>
        <description>The description of the criteria or purpose of the rule.</description>
        <inlineHelpText>The description of the criteria or purpose of the rule.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Object_Type__c</fullName>
        <description>The target object for the rule.</description>
        <inlineHelpText>The target object for the rule.</inlineHelpText>
        <label>Object Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>UI_Workflow_Rules</relationshipLabel>
        <relationshipName>UI_Workflow_Rules</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>rootstock__Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reserved for future.</description>
        <inlineHelpText>Reserved for future.</inlineHelpText>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rootstock__Unique_Key__c</fullName>
        <description>The unique key to identify the rule.</description>
        <inlineHelpText>The unique key to identify the rule.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>UI Rule</label>
    <pluralLabel>UI Rules</pluralLabel>
    <validationRules>
        <fullName>rootstock__Rule_cannot_be_overridden</fullName>
        <active>true</active>
        <description>Checks if the user is allowed to override the rule&apos;s field values.</description>
        <errorConditionFormula>IF(rootstock__Allow_Override__c, false, NOT(rootstock__Active__c))</errorConditionFormula>
        <errorMessage>Rule cannot be overridden</errorMessage>
    </validationRules>
</CustomObject>